--- a/index.html
+++ b/index.html
@@ -611,25 +611,38 @@
             <div>
 
               <p>
+                <em>August 2, 2023 - </em>
+                <a href="https://www.aswf.io/">Academy Software Foundation</a>
+                Open Source Days 2023
+                Session
+                <br>
+                <strong>MaterialX Virtual Town Hall</strong>
+                <br>
+                (<a href="assets/ASWF_OSD2023_MaterialX_Final.pdf">Slide Deck PDF</a>)
+                &nbsp; <a href="https://www.youtube.com/watch?v=PdxArDHRI-c">Presentation Video</a>)
+              </p>
+
+              <p>
                 <em>August 8, 2022 - </em>
                 <a href="https://www.aswf.io/">Academy Software Foundation</a>
-                <a href="https://events.linuxfoundation.org/open-source-days/">Open Source Days 2022</a>
+                Open Source Days 2022
                 Session
                 <br>
                 <strong>New Developments in MaterialX and OSL</strong>
                 <br>
-                (<a href="assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf ">Slide Deck PDF</a>)
-                &nbsp; (Presentation Video will be posted when available)
+                (<a href="assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">Slide Deck PDF</a>)
+                &nbsp; <a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
               </p>
 
               <p>
                 <em>August 5, 2021 - </em>
                 <a href="https://www.aswf.io/">Academy Software Foundation</a>
-                Open Source Days 2021 Session
+                Open Source Days 2021
+                Session
                 <br>
                 <strong>MaterialX New Developments</strong>
                 <br>
-                (<a href="assets/ASWF_OSD2021_MaterialX_slides_final.pdf ">Slide Deck PDF</a>)
+                (<a href="assets/ASWF_OSD2021_MaterialX_slides_final.pdf">Slide Deck PDF</a>)
                 &nbsp; (<a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
               </p>
 
