Update earlier conference links

--- a/index.html
+++ b/index.html
@@ -682,7 +682,8 @@
 
               <p>
                 <em>July 30, 2019 - </em>
-                <a href="https://s2019.siggraph.org/presentation/?id=bof_131&sess=sess315">Siggraph 2019 Birds-of-a-Feather Session</a>
+                <a href="https://s2019.siggraph.org/">Siggraph 2019</a>
+                Birds-of-a-Feather Session
                 <br>
                 <strong>MaterialX: An Open Standard for Network-Based CG Object Looks</strong>
                 <br>
@@ -694,9 +695,10 @@
 
               <p>
                 <em>July 31, 2019 - </em>
-                <a href="https://s2019.siggraph.org/session/?sess=sess467">Siggraph 2019 Exhibitor Session</a>
+                <a href="https://s2019.siggraph.org/">Siggraph 2019</a>
+                Autodesk Exhibitor Session
                 <br>
-                <strong>Autodesk Exhibitor Session: Open Source Support at Autodesk – MaterialX (2 of 2)</strong>
+                <strong>Open Source Support at Autodesk: MaterialX</strong>
                 <br>
                 "Open source projects play an increasingly critical role in the creation of Film and TV content. We’ll start with an update on open source support at Autodesk, then deep-dive into our work on USD, including collaboration with tech partners and creative studios."
                 <br>
@@ -705,7 +707,9 @@
               </p>
 
               <p>
-                <em>August 13, 2018 - </em><a href="https://s2018.siggraph.org/conference/conference-overview/birds-of-a-feather/">Siggraph 2018 Birds-of-a-Feather Meeting</a>
+                <em>August 13, 2018 - </em>
+                <a href="https://s2018.siggraph.org/">Siggraph 2018</a>
+                Birds-of-a-Feather Meeting
                 <br>
                 <strong>MaterialX: An Open Standard for Network-Based CG Object Looks</strong>
                 <br>
@@ -715,7 +719,9 @@
               </p>
 
               <p>
-                <em>July 31, 2017 - </em><a href="http://s2017.siggraph.org/birds-feather.html">Siggraph 2017 Birds-of-a-Feather Meeting</a>
+                <em>July 31, 2017 - </em>
+                <a href="https://s2017.siggraph.org/">Siggraph 2017</a>
+                Birds-of-a-Feather Meeting
                 <br>
                 <strong>MaterialX: An Open Standard for Network-Based CG Object Looks</strong>
                 <br>
@@ -725,7 +731,9 @@
               </p>
 
               <p>
-                <em>July 27, 2016 - </em><a href="http://s2016.siggraph.org/birds-feather/sessions/materialx-open-standard-network-based-cg-object-looks.html">Siggraph 2016 Birds-of-a-Feather Meeting</a>
+                <em>July 27, 2016 - </em>
+                <a href="https://s2016.siggraph.org/">Siggraph 2016</a>
+                Birds-of-a-Feather Meeting
                 <br>
                 <strong>MaterialX: An Open Standard for Network-Based CG Object Looks</strong>
                 <br>
