Simplify update markings

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 to download the latest library source code, documentation and examples.
                 <br><br>
 
-                <em>Update April 12th, 2024:</em>
+                <em>April 12th, 2024:</em>
                 MaterialX Library v1.38.10 has been released.
                 This is primarily a patch build to improve MaterialX integrations in USD,
                 with the one new feature being environment light intensity controls in generated GLSL shaders.
@@ -328,7 +328,7 @@
                 on the MaterialX Github for further details,
                 <br><br>
 
-                <em>Update February 26th, 2024:</em>
+                <em>February 26th, 2024:</em>
                 MaterialX Library v1.38.9 has been released.
                 This version adds support for environment prefiltering on the GPU,
                 integrates improvements to the MaterialX Graph Editor and MaterialX Web Viewer from the ASWF Dev Days community,
@@ -338,7 +338,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update September 8, 2023:</em>
+                <em>September 8, 2023:</em>
                 MaterialX Library v1.38.8 has been released.
                 This release adds a rich set of new pattern nodes to the standard,
                 and is the first MaterialX release with support for iOS builds,
@@ -349,7 +349,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update April 21, 2023:</em>
+                <em>April 21, 2023:</em>
                 MaterialX Library v1.38.7 has been released.
                 This release adds the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/GraphEditor.md">MaterialX Graph Editor</a>,
@@ -360,7 +360,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update November 4, 2022:</em>
+                <em>November 4, 2022:</em>
                 MaterialX Library v1.38.6 has been released.
                 This release adds Unified Noise and Color Correct nodes,
                 improved iridescence rendering in GLSL,
@@ -370,7 +370,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update July 9, 2022:</em>
+                <em>July 9, 2022:</em>
                 MaterialX Library v1.38.5 has been released.
                 This release adds support for Vulkan GLSL generation,
                 improved real-time refraction,
@@ -381,7 +381,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update Apr 6, 2022:</em>
+                <em>Apr 6, 2022:</em>
                 MaterialX Library v1.38.4 has been released.
                 This release adds a
                 <a href="https://academysoftwarefoundation.github.io/MaterialX/">Web Viewer</a> example based on
@@ -395,7 +395,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update Dec 14, 2021:</em>
+                <em>Dec 14, 2021:</em>
                 MaterialX Library v1.38.3 has been released.
                 This release adds
                 refactored BSDF handling in shader generation enabling more flexible and efficient vertical layering,
@@ -410,7 +410,7 @@
                 on the MaterialX Github for further details.
                 <br><br>
 
-                <em>Update Oct 7, 2021:</em>
+                <em>Oct 7, 2021:</em>
                 MaterialX Library v1.38.2 has been released.
                 This release adds
                 improved accuracy of directional albedo computations for GGX specular and Imageworks sheen,
