Add slide deck for ASWF OSD 2024

--- a/index.html
+++ b/index.html
@@ -554,6 +554,16 @@
             <div>
 
               <p>
+                <em>July 23, 2024 - </em>
+                <a href="https://www.aswf.io/">Academy Software Foundation</a>
+                Open Source Days 2024
+                Session
+                <br>
+                <strong>MaterialX and OpenPBR Virtual Town Hall</strong>
+                <br>
+                (<a href="assets/ASWF_OSD2024_MaterialX_Final.pdf">Slide Deck PDF</a>)
+                <br><br>
+
                 <em>August 2, 2023 - </em>
                 <a href="https://www.aswf.io/">Academy Software Foundation</a>
                 Open Source Days 2023
@@ -562,7 +572,8 @@
                 <strong>MaterialX Virtual Town Hall</strong>
                 <br>
                 (<a href="assets/ASWF_OSD2023_MaterialX_Final.pdf">Slide Deck PDF</a>)
-                &nbsp; <a href="https://www.youtube.com/watch?v=PdxArDHRI-c">Presentation Video</a>)
+                &nbsp;
+                (<a href="https://www.youtube.com/watch?v=PdxArDHRI-c">Presentation Video</a>)
                 <br><br>
 
                 <em>August 8, 2022 - </em>
@@ -573,7 +584,8 @@
                 <strong>New Developments in MaterialX and OSL</strong>
                 <br>
                 (<a href="assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">Slide Deck PDF</a>)
-                &nbsp; <a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
+                &nbsp;
+                (<a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
                 <br><br>
 
                 <em>August 5, 2021 - </em>
@@ -584,7 +596,8 @@
                 <strong>MaterialX New Developments</strong>
                 <br>
                 (<a href="assets/ASWF_OSD2021_MaterialX_slides_final.pdf">Slide Deck PDF</a>)
-                &nbsp; (<a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
+                &nbsp;
+                (<a href="https://www.youtube.com/watch?v=tK9_PLWv4eM">Presentation Video</a>)
                 <br><br>
 
                 <em>August 26, 2020 - </em>
@@ -595,7 +608,8 @@
                 "MaterialX Physically Based Shading Nodes"
                 <br>
                 (<a href="https://blog.selfshadow.com/publications/s2020-shading-course/materialx/s2020_pbs_materialx_slides.pdf">Slide Deck PDF</a>)
-                &nbsp; (<a href="https://blog.selfshadow.com/publications/s2020-shading-course/#materialx">Presentation Video</a>)
+                &nbsp;
+                (<a href="https://blog.selfshadow.com/publications/s2020-shading-course/#materialx">Presentation Video</a>)
                 <br><br>
 
                 <em>August 25, 2020 - </em>
