--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
               <li class="">
                 <a class="blueButton" style="font-size:14px" href="https://github.com/AcademySoftwareFoundation/MaterialX">GitHub</a>
               </li>
-              <a class="iconButton" href="https://twitter.com/MaterialXCG" style="float:right">
-                <img src="images/Twitter_Logo_Gray_sm.png" width=20 height=20>
+              <a class="iconButton" href="https://fosstodon.org/@MaterialX" style="float:right">
+                <img src="images/MastodonLogo.svg" width=20 height=20>
               </a>
             </ul>
           </div>
