Update third-party support
- Update links and text to reflect the latest presentations, support, and versioning.
- Add a link to the USD/MaterialX architecture guide.

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -269,11 +269,11 @@
 
           <h2 id="USD"><strong>Pixar USD</strong></h2>
           <p>
-            Pixar's Universal Scene Description (USD) supports MaterialX through a dedicated <a href="https://graphics.pixar.com/usd/release/api/usd_mtlx_page_front.html">UsdMtlx</a> library, enabling the referencing of MaterialX documents and composition of MaterialX content in USD stages.
+            Pixar's Universal Scene Description (USD) supports MaterialX through a dedicated <a href="https://openusd.org/release/api/usd_mtlx_page_front.html">UsdMtlx</a> library, enabling the referencing of MaterialX documents and composition of MaterialX content in USD stages.
             <br><br>
-            The USD Hydra rendering framework supports MaterialX in HdStorm and HdPrman, using <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/ShaderGeneration.md">ShaderGen</a> to generate GLSL and OSL shaders from MaterialX graphs on demand.
+            The USD Hydra rendering framework supports MaterialX in <a href="https://openusd.org/release/api/_page__material_x__in__hydra__u_s_d.html">HdStorm</a> and HdPrman, using <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/documents/DeveloperGuide/ShaderGeneration.md">ShaderGen</a> to generate GLSL and OSL shaders from MaterialX graphs on demand.
             <br><br>
-            Additional details on MaterialX support in USD Hydra may be found in the slides from the MaterialX Virtual Towh Hall at <a href="https://materialx.org/assets/ASWF_OSD2023_MaterialX_Final.pdf">ASWF Open Source Days 2023</a>.
+            Additional details on MaterialX support in USD and Hydra may be found in the slides from the MaterialX Virtual Town Hall at <a href="https://materialx.org/assets/ASWF_OSD2024_MaterialX_Final.pdf">ASWF Open Source Days 2024</a>.
           </p>
 
           <h2 id="Houdini"><strong>SideFX Houdini</strong></h2>
@@ -289,7 +289,7 @@
           <p>
             Autodesk supports MaterialX in Maya 2024 and beyond through the <a href="https://help.autodesk.com/view/MAYAUL/2025/ENU/?guid=GUID-BCF8E14C-6347-4CF8-9CD4-FA3E6CAFD8BA">LookdevX</a> framework, enabling the creation, editing, and rendering of MaterialX graphs.
             <br><br>
-            Additional details on LookdevX in Maya may be found in the slides from the MaterialX Virtual Town Hall at <a href="https://materialx.org/assets/ASWF_OSD2023_MaterialX_Final.pdf">ASWF Open Source Days 2023</a>.
+            Additional details on LookdevX in Maya may be found in the slides from the MaterialX Virtual Town Hall at <a href="https://materialx.org/assets/ASWF_OSD2024_MaterialX_Final.pdf">ASWF Open Source Days 2024</a>.
           </p>
 
           <h2 id="Max"><strong>Autodesk 3ds Max</strong></h2>
@@ -306,14 +306,14 @@
 
           <h2 id="Apple"><strong>Apple VisionOS</strong></h2>
           <p>
-            Apple has adopted MaterialX as the material representation for its upcoming <a href="https://developer.apple.com/visionos/">VisionOS</a> platform, including a pathway for translating <a href="https://developer.apple.com/videos/play/wwdc2023/10088//">Unity Shader Graph</a> content to MaterialX.
+            Apple has adopted MaterialX as the material representation for its <a href="https://developer.apple.com/visionos/">VisionOS</a> platform, including a pathway for translating <a href="https://developer.apple.com/videos/play/wwdc2023/10088//">Unity Shader Graph</a> content to MaterialX.
             <br><br>
-            Additional details on MaterialX in Apple VisionOS may be found in the video presentations for <a href="https://developer.apple.com/videos/play/wwdc2023/10086">WWDC 2023</a>.
+            Additional details on MaterialX in Apple VisionOS may be found in the video presentations for <a href="https://developer.apple.com/videos/play/wwdc2024/10106/">WWDC 2024</a>.
           </p>
 
           <h2 id="Unreal"><strong>Unreal Engine</strong></h2>
           <p>
-            Epic Games supports MaterialX in <a href="https://docs.unrealengine.com/5.3/en-US/interchange-materialx-reference-in-unreal-engine/">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on the Standard Surface shading model.
+            Epic Games supports MaterialX in <a href="https://dev.epicgames.com/documentation/en-us/unreal-engine/interchange-materialx-reference-in-unreal-engine">Unreal Engine 5.1 and beyond</a>, allowing the import of MaterialX documents based on open shading models such as Standard Surface and OpenPBR Surface.
             <br><br>
             As of <a href="https://docs.unrealengine.com/5.3/en-US/unreal-engine-5.3-release-notes/">Unreal Engine 5.3</a>, MaterialX content may additionally be referenced in USD workflows within Unreal.
             <br><br>
@@ -322,9 +322,9 @@
 
           <h2 id="Omniverse"><strong>NVIDIA Omniverse</strong></h2>
           <p>
-            NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/prod_kit/prod_kit/release-notes/104_1_highlights.html#material-x-1-38-support">Omniverse Kit 104.1 and beyond</a>, allowing MaterialX documents to be imported and rendered through MDL shader generation.
+            NVIDIA supports MaterialX in <a href="https://docs.omniverse.nvidia.com/kit/docs/omni.materialx.libs/latest/Overview.html">Omniverse Kit 1.0.1 and beyond</a>, allowing MaterialX documents to be imported and rendered through MDL shader generation.
             <br><br>
-            Additional details on the roadmap for MaterialX in Omniverse may be found on the <a href="https://developer.nvidia.com/blog/unlock-seamless-material-interchange-for-virtual-worlds-with-openusd-materialx-and-openpbr/">NVIDIA developer site</a> and in the slides from the MaterialX and OSL session at <a href="https://www.materialx.org/assets/ASWF_OSD2022_MaterialX_OSL_Final.pdf">ASWF Open Source Days 2022</a>.
+            Additional details on the roadmap for MaterialX in Omniverse may be found on the <a href="https://developer.nvidia.com/blog/unlock-seamless-material-interchange-for-virtual-worlds-with-openusd-materialx-and-openpbr/">NVIDIA developer site</a> and in the slides from the MaterialX Virtual Town Hall at <a href="https://materialx.org/assets/ASWF_OSD2024_MaterialX_Final.pdf">ASWF Open Source Days 2024</a>.
           </p>
 
           <h2 id="Arnold"><strong>Autodesk Arnold</strong></h2>
@@ -338,7 +338,7 @@
 
           <h2 id="RenderMan"><strong>Pixar RenderMan</strong></h2>
           <p>
-            Pixar supports MaterialX in <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX">RenderMan 24 and beyond</a>, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki.pixar.com/display/REN25/MaterialX+Lama">MaterialX Lama</a> nodes.
+            Pixar supports MaterialX in <a href="https://rmanwiki-26.pixar.com/space/REN26/19662341/MaterialX">RenderMan 24 and beyond</a>, rendering MaterialX pattern nodes through USD HdPrman, and rendering Physically Based Shading features through a custom implementation of the <a href="https://rmanwiki-26.pixar.com/space/REN26/19661457/MaterialX+Lama">MaterialX Lama</a> nodes.
             <br><br>
             Additional details on MaterialX Lama may be found in this <a href="https://www.youtube.com/playlist?list=PLBozb72i61ywUiXPHA3nUgD9_9_b3phGW">tutorial series</a> from Pixar.
           </p>
