--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             shading and processing nodes with a precise mechanism for functional extensibility.
           </p>
 
-          <p>The MaterialX library, now at release v1.39.1, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
+          <p>The MaterialX library, now at release v1.39.2, is an <a href="https://github.com/AcademySoftwareFoundation/MaterialX" class="external-link" rel="nofollow">Open Source project</a> released under an <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE" class="external-link" rel="nofollow">Apache License Version 2.0</a>.</p>
 
           <br>
           <h2><strong>Announcements</strong></h2>
@@ -303,16 +303,29 @@
             <div>
               <p>
 
+                <em>Update January 20th, 2025:</em>
+                <br><strong>MaterialX Library v1.39.2 has been released</strong>.
+                This version adds support for the Chiang Hair BSDF,
+                Disney Principled shading model,
+                generic color ramps,
+                improved Worley noise,
+                shader generation optimizations,
+                and much more.
+                Please see the
+                <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.39.2">MaterialX Version 1.39.2 release page</a>
+                on the MaterialX Github for further details,
+                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
+                to download the latest library source code, documentation and examples.
+                <br><br>
+
                 <em>Update September 3rd, 2024:</em>
-                <br><strong>MaterialX Library v1.39.1 has been released</strong>.
+                MaterialX Library v1.39.1 has been released.
                 This version adds initial shader translation graphs between Standard Surface and OpenPBR Surface,
                 aligns the public definitions of the MaterialX Lama nodes with RenderMan,
                 and addresses a number of build issues in OpenUSD integrations.
                 Please see the
                 <a href="https://github.com/AcademySoftwareFoundation/MaterialX/releases/tag/v1.39.1">MaterialX Version 1.39.1 release page</a>
-                on the MaterialX Github for further details,
-                and visit the <a href="https://github.com/AcademySoftwareFoundation/MaterialX">MaterialX GitHub repository</a>
-                to download the latest library source code, documentation and examples.
+                on the MaterialX Github for further details.
                 <br><br>
 
                 <em>Update July 5th, 2024:</em>
