Add slide deck for ASWF OSD 2025

--- a/index.html
+++ b/index.html
@@ -587,6 +587,16 @@
             <div>
 
               <p>
+                <em>August 5, 2025 - </em>
+                <a href="https://www.aswf.io/">Academy Software Foundation</a>
+                Open Source Days 2025
+                Session
+                <br>
+                <strong>MaterialX and OpenPBR Virtual Town Hall</strong>
+                <br>
+                (<a href="assets/ASWF_OSD2025_MaterialX_Final.pdf">Slide Deck PDF</a>)
+                <br><br>
+
                 <em>July 23, 2024 - </em>
                 <a href="https://www.aswf.io/">Academy Software Foundation</a>
                 Open Source Days 2024
@@ -595,6 +605,8 @@
                 <strong>MaterialX and OpenPBR Virtual Town Hall</strong>
                 <br>
                 (<a href="assets/ASWF_OSD2024_MaterialX_Final.pdf">Slide Deck PDF</a>)
+                &nbsp;
+                (<a href="https://www.youtube.com/watch?v=hMNQHlbHYHc">Presentation Video</a>)
                 <br><br>
 
                 <em>August 2, 2023 - </em>
