Add semantic HTML elements
This changelist adds semantic HTML elements to all pages for improved readability.

Additionally, it removes a handful of legacy copyright notices from the consolidated style sheet.

--- a/ThirdPartySupport.html
+++ b/ThirdPartySupport.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>MaterialX - Third Party Support</title>
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-  <div class="navigation">
+  <aside class="navigation">
     <br>
-    <div class="quickLinks">
+    <nav class="quickLinks">
       <div>
         <a href="index.html"><img alt="<MaterialX Logo>" src="images/MaterialXLogoSmallA.png"></a>
       </div>
@@ -165,10 +165,10 @@
           <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/LICENSE">License</a>
         </li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </aside>
 
-  <div class="document">
+  <main class="document">
     <h1 class="title">
       <span id="title-text">
         MaterialX
@@ -176,9 +176,9 @@
     </h1>
 
     <div id="mainContentContainer">
-      <div class="fullWidth headerColor">
+      <header class="fullWidth headerColor">
         <div class="center">
-          <div id="mainSiteNavigation">
+          <nav id="mainSiteNavigation">
             <ul class="creatorMainNav floatRight" id="menu">
               <li class="">
                 <a href="index.html">Home</a>
@@ -196,9 +196,9 @@
                 <img src="images/MastodonLogo.svg" width=20 height=20>
               </a>
             </ul>
-          </div>
+          </nav>
         </div>
-      </div>
+      </header>
 
       <!-- Page Title ---------------------------------------------------------------------- -->
       <div class="clearBoth"></div>
@@ -208,8 +208,8 @@
       <!-- --------------------------------------------------------------------------------- -->
 
       <div class="clearBoth"></div>
-      <div class="coursewareBackground">
-        <div class="topicLeftData-MainData">
+      <section class="coursewareBackground">
+        <article class="topicLeftData-MainData">
 
           <!-- Page Content -------------------------------------------------------------------- -->
 
@@ -309,7 +309,7 @@
 
     <div class="clearBoth"></div>
     <div class="center">
-      <div class="copyrightFooter">
+      <footer class="copyrightFooter">
         <p>
           <a href="" style="color: #666666">TERMS OF USE</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -320,9 +320,9 @@
           <a href="" style="color: #666666">CHILDREN’S ONLINE PRIVACY POLICY</a>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="" style="color: #666666">YOUR CALIFORNIA PRIVACY POLICY</a>
-      </div>
+      </footer>
     </div>
-  </div>
+  </main>
 
 </body>
 </html>
