Update developer reference
- Add a link to repository examples in the OpenPBR Surface model.
- Add a link to MaterialX downloads on Poly Haven.

--- a/DeveloperReference.html
+++ b/DeveloperReference.html
@@ -241,7 +241,9 @@
             <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/UsdPreviewSurface">UsdPreviewSurface</a>,
                  a shading model developed by Pixar.</li>
             <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/GltfPbr">glTF PBR</a>,
-                 a shading model developed by Khronos.</li>
+                 a shading model maintained by Khronos.</li>
+            <li><a href="https://github.com/AcademySoftwareFoundation/MaterialX/tree/main/resources/Materials/Examples/OpenPbr">OpenPBR Surface</a>,
+                 a shading model maintained by the Academy Software Foundation.</li>
           </ul>
           <p>
             See the <a href="https://github.com/AcademySoftwareFoundation/MaterialX/blob/main/libraries/bxdf">BxDF Libraries</a>
@@ -252,6 +254,10 @@
             providing a wide variety of MaterialX examples under a Creative Commons license.
             The library is well-organized and searchable, with support for real-time preview, web API integration,
             and contributions from the community.
+          </p>
+          <p>
+            The <a href="https://polyhaven.com/">Poly Haven</a> site maintains an open, searchable library of texture
+            and material assets, supporting downloads in the MaterialX format.
           </p>
           <p>
             The <a href="https://physicallybased.info/">Physically Based</a> database is another useful resource,
